--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300&display=swap');
+body {
+  font-family: 'Roboto Condensed', sans-serif;
+}
+:root{
+  --primary-white:#fff;
+  --primary-orange: #f9ab00;
+  --primary-dark: rgba(255,255,255, 0);
+}
+/* navibar */
+.logo{
+  width: 10.0rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* menu link */
+nav a.nav-link {
+font-weight: 300;
+letter-spacing: 0.038rem;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+nav ul li {
+  text-transform: uppercase;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.navbar-nav >li > a {
+  margin-right: 0.55rem;
+  margin-left: 0.55rem;
+  color: var(--primary-white) !important;
+  border-top: 0.188rem solid var(--primary-dark);
 }
+/* .navbar-brand{
+  max-width: 9.25rem;
+  padding: 0rem !important;
+  height: 6rem !important;
+} */
 
-.App-link {
-  color: #61dafb;
+.navbar-nav > li >a.active, .navbar-nav > li > a.active:focus {
+  border-top: 0.188rem solid var(--primary-orange);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar-nav > li > a:hover{
+  border-top: 0.188rem solid var(--primary-orange);
 }
